--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Basic
-title: 潘柏信
-subtitle: 个人站
-description: 欢迎来到我的个人站~
+title: Jenny Qin
+subtitle: personal site
+description: Welcome to Jenny's Personal Website~
 # 头像里面的标题
-avatarTitle: leopardpan
+avatarTitle: Jenny Qin
 # 头像里面的描述
-avatarDesc: iOS / 机器学习
-url: "https://leopardpan.cn"
+avatarDesc: ML/Financial Engineering
+url: "https://mkchocolate.github.io/"
 
 # 博客是否自动生成目录，false为不生成
 enableToc: true
@@ -14,31 +14,23 @@ enableToc: true
 # Comment
 comment:
     # livere: MTAyMC81MDk5NC8yNzQ3Ng  # https://www.livere.com
-    disqus: leopard
+    disqus: JennyQin
     # uyan: 2143225  # 有言id,登录有言官网申请
 
 # Social
 social:
-    weibo: 5366874726 
-    github: leopardpan
+    github: mkchocolate
     # zhihu: panpanleopard
     # juejin: xxx
-    jianshu: 2ada30d8d0f7
     # twitter: 
-    mail: leopardpan@icloud.com
+    mail: qinzhengyi3@gmail.com
 
 
 # 百度统计 
 # 使用博客模板请去掉或者更换 id 
-baidu:
-    id: 8ba1c6be0953b6f9c2ba38e57f615421  
 
 # Google Analytics
 # 使用博客模板请去掉或者更换 id
-ga:
-    id: UA-84134159-3  
-    host: auto  
-
 
 # 《----------------- 上面的信息修改成你自己的 ---------------------------》
 #
@@ -61,14 +53,14 @@ cover_color: clear
 
 # The blog button should not be removed.
 blog_button:
-    title: 博客主页
+    title: Main Page
 
 # Navigation buttons in the front page.s
 nav:
-    - {title: 所有文章, description: archive, url: '/archive'}   
-    - {title: 标签, description: tags, url: '/tags'}      
-    - {title: 技术支持, description: support, url: '/support'}      
-    - {title: 关于我, description: about, url: '/about'}   
+    - {title: All Posts, description: archive, url: '/archive'}   
+    - {title: Tags, description: tags, url: '/tags'}      
+    - {title: Support, description: support, url: '/support'}      
+    - {title: About Me, description: about, url: '/about'}   
     
 
 # Pagination
